@@ -22,13 +22,15 @@ import com.amazonaws.Protocol;
 import com.amazonaws.regions.Regions;
 import com.amazonaws.services.cloudwatch.AmazonCloudWatchClient;
 import org.apache.camel.BindToRegistry;
-import org.apache.camel.test.junit4.CamelTestSupport;
-import org.junit.Test;
+import org.apache.camel.test.junit5.CamelTestSupport;
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 
 public class CwComponentConfigurationTest extends CamelTestSupport {
-    
+
     @BindToRegistry("now")
     private static final Date NOW = new Date();
 
@@ -36,8 +38,9 @@ public class CwComponentConfigurationTest extends CamelTestSupport {
     public void createEndpointWithAllOptions() throws Exception {
         AmazonCloudWatchClient cloudWatchClient = mock(AmazonCloudWatchClient.class);
         context.getRegistry().bind("amazonCwClient", cloudWatchClient);
-        CwComponent component = new CwComponent(context);
-        CwEndpoint endpoint = (CwEndpoint) component.createEndpoint("aws-cw://camel.apache.org/test?amazonCwClient=#amazonCwClient&name=testMetric&value=2&unit=Count&timestamp=#now");
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        CwEndpoint endpoint = (CwEndpoint) component.createEndpoint(
+                "aws-cw://camel.apache.org/test?amazonCwClient=#amazonCwClient&name=testMetric&value=2&unit=Count&timestamp=#now");
 
         assertEquals("camel.apache.org/test", endpoint.getConfiguration().getNamespace());
         assertEquals("testMetric", endpoint.getConfiguration().getName());
@@ -46,64 +49,69 @@ public class CwComponentConfigurationTest extends CamelTestSupport {
         assertEquals(NOW, endpoint.getConfiguration().getTimestamp());
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void createEndpointWithoutAccessKeyConfiguration() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.createEndpoint("aws-cw://camel.apache.org/test?secretKey=yyy");
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        assertThrows(IllegalArgumentException.class,
+                () -> component.createEndpoint("aws-cw://camel.apache.org/test?secretKey=yyy"));
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void createEndpointWithoutSecretKeyConfiguration() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxx");
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        assertThrows(IllegalArgumentException.class,
+                () -> component.createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxx"));
     }
-    
-    @Test(expected = IllegalArgumentException.class)
+
+    @Test
     public void createEndpointWithoutSecretKeyAndAccessKeyConfiguration() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxx");
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        assertThrows(IllegalArgumentException.class,
+                () -> component.createEndpoint("aws-cw://camel.apache.org/test"));
     }
-    
+
     @Test
     public void createEndpointWithComponentElements() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.setAccessKey("XXX");
-        component.setSecretKey("YYY");
-        CwEndpoint endpoint = (CwEndpoint)component.createEndpoint("aws-cw://camel.apache.org/test");
-        
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        component.getConfiguration().setAccessKey("XXX");
+        component.getConfiguration().setSecretKey("YYY");
+        CwEndpoint endpoint = (CwEndpoint) component.createEndpoint("aws-cw://camel.apache.org/test");
+
         assertEquals("camel.apache.org/test", endpoint.getConfiguration().getNamespace());
         assertEquals("XXX", endpoint.getConfiguration().getAccessKey());
         assertEquals("YYY", endpoint.getConfiguration().getSecretKey());
     }
-    
+
     @Test
     public void createEndpointWithComponentAndEndpointElements() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.setAccessKey("XXX");
-        component.setSecretKey("YYY");
-        component.setRegion(Regions.US_WEST_1.toString());
-        CwEndpoint endpoint = (CwEndpoint)component.createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxxxxx&secretKey=yyyyy&region=US_EAST_1");
-        
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        component.getConfiguration().setAccessKey("XXX");
+        component.getConfiguration().setSecretKey("YYY");
+        component.getConfiguration().setRegion(Regions.US_WEST_1.toString());
+        CwEndpoint endpoint = (CwEndpoint) component
+                .createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxxxxx&secretKey=yyyyy&region=US_EAST_1");
+
         assertEquals("camel.apache.org/test", endpoint.getConfiguration().getNamespace());
         assertEquals("xxxxxx", endpoint.getConfiguration().getAccessKey());
         assertEquals("yyyyy", endpoint.getConfiguration().getSecretKey());
         assertEquals("US_EAST_1", endpoint.getConfiguration().getRegion());
     }
-    
+
     @Test
     public void createEndpointWithComponentEndpointOptionsAndProxy() throws Exception {
-        CwComponent component = new CwComponent(context);
-        component.setAccessKey("XXX");
-        component.setSecretKey("YYY");
-        component.setRegion(Regions.US_WEST_1.toString());
-        CwEndpoint endpoint = (CwEndpoint)component.createEndpoint("aws-cw://camel.apache.org/test?accessKey=xxxxxx&secretKey=yyyyy&region=US_EAST_1&proxyHost=localhost&proxyPort=9000");
-        
+        CwComponent component = context.getComponent("aws-cw", CwComponent.class);
+        component.getConfiguration().setAccessKey("XXX");
+        component.getConfiguration().setSecretKey("YYY");
+        component.getConfiguration().setRegion(Regions.US_WEST_1.toString());
+        CwEndpoint endpoint = (CwEndpoint) component.createEndpoint(
+                "aws-cw://camel.apache.org/test?accessKey=xxxxxx&secretKey=yyyyy&region=US_EAST_1&proxyHost=localhost&proxyPort=9000");
+
         assertEquals("camel.apache.org/test", endpoint.getConfiguration().getNamespace());
         assertEquals("xxxxxx", endpoint.getConfiguration().getAccessKey());
         assertEquals("yyyyy", endpoint.getConfiguration().getSecretKey());
         assertEquals("US_EAST_1", endpoint.getConfiguration().getRegion());
         assertEquals("localhost", endpoint.getConfiguration().getProxyHost());
-        assertEquals(new Integer(9000), endpoint.getConfiguration().getProxyPort());
+        assertEquals(Integer.valueOf(9000), endpoint.getConfiguration().getProxyPort());
         assertEquals(Protocol.HTTPS, endpoint.getConfiguration().getProxyProtocol());
     }
 }
